6177
I've intermittently experienced almost the same on locally built pack bins on Windows 7 (built at rev 25149) as well as nightly _2.10.0.r25154-b20110625020222 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_18)_. The only difference is CTRL-C doesn't exit. I have to kill with the Task Manager.

{noformat}
H:\r25154\bin>scala.bat
Welcome to Scala version 2.10.0.r25154-b20110625020222 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_18).
Type in expressions to have them evaluated.
Type :help for more information.

scala> dasdasfd
<console>:8: error: not found: value dasdasfd
              dasdasfd
              ^
// This represents ctrl-D freezing
scala>
{noformat}

Because it's scala.bat, it's basically equivalent to using the nobootcp option. I'm collecting a stack dump and heap dump and will attach. 

Note it also happens with cygwin even when starting with {{/cygdrive/h/r25154/bin/scala -nobootcp -Djline.terminal=none}} and exiting using {{:quit}}. Never happens when using {{exit}}.
